[LRN] Fix vertical alignment of \sum expressions
Firefox renders expressions such as \sum_{i=1}^n1 differently to other
browsers, by vertically aligning the .mq-large-operator containing the
sigma to the baseline rather than the middle.

This change makes .mq-large-operator consistent with other large inline-
block elements such as .mq-matrix by making its vertical-align explicit.

See LRN-21026.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -568,6 +568,7 @@
 
   .mq-large-operator {
     text-align: center;
+    vertical-align: middle;
 
     .mq-from, big, .mq-to  {
       display: block;
